--- a/pure-render.cabal
+++ b/pure-render.cabal
@@ -1,14 +1,17 @@
 name:                pure-render
-version:             0.7.0.0
-synopsis:            
-homepage:            github.com/grumply/pure-render
+version:             0.8.0.0
+homepage:            purehs.org/doc/pure-render
 license:             BSD3
 license-file:        LICENSE
-author:              Sean Mackenzie
-maintainer:          sean@grump.ly
+author:              Sean Hickman
+maintainer:          sean@grumply.com
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
+
+source-repository head
+  type: git
+  location: https://github.com/grumply/pure-render.git
 
 Flag use-template-haskell
      Description: enable template haskell for a Lift SHTML instance
@@ -20,13 +23,13 @@ library
     Pure.Data.Render
 
   build-depends:
-    base >= 4.8,
-    pure-core >= 0.7 && < 1,
-    pure-default >= 0.7 && < 1,
-    pure-dom >= 0.7 && < 1,
-    pure-json >= 0.7 && < 1,
-    pure-lifted >= 0.7 && < 1,
-    pure-txt >= 0.7 && < 1,
+    base,
+    pure-core,
+    pure-default,
+    pure-dom,
+    pure-json,
+    pure-lifted,
+    pure-txt,
     containers
 
   if flag(use-template-haskell)
